Consertando warnings do java